<resources>
    <string name="app_name">MelkovHw52</string>
    <string name="note">Текст заметки</string>
    <string name="save">Сохранить</string>
    <string name="data_saved">Данные сохранены</string>
    <string name="shared_prefs">51 Записная книжка</string>
    <string name="tasks">43 Сроки задачи</string>
    <string name="start_date">Начало задачи: </string>
    <string name="end_date">Завершение задачи: </string>
    <string name="ok">ОК</string>
    <string name="error_start_end_date">Дата завершения задачи должна быть после даты начала!</string>
    <string name="error_empty_date">Необходимо указать дату начала и завершения задачи</string>
    <string name="cities">42 Страны, города, улицы</string>
    <string name="check_box">41 Взаимоисключающие CheckBox</string>
    <string name="show_address">Показать адрес</string>
    <string-array name="countries">
        <item>Россия</item>
        <item>Украина</item>
        <item>Белоруссия</item>
    </string-array>
    <string-array name="r_cities">
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Казань</item>
    </string-array>
    <string-array name="u_cities">
        <item>Киев</item>
        <item>Одесса</item>
        <item>Харьков</item>
    </string-array>
    <string-array name="b_cities">
        <item>Минск</item>
        <item>Гомель</item>
        <item>Витебск</item>
    </string-array>
    <string name="input_money">Ввод денег</string>
    <string name="input_info">Информация об оплате</string>
    <string name="bank_card">С банковской карты</string>
    <string name="mobile_phone">С мобильного телефона</string>
    <string name="by_cash">Наличными по адресу</string>
    <string name="payment_fail">Укажите параметры оплаты!</string>
    <string name="payment_complete">Оплата на сумму %s проведена (%s).</string>
    <string name="fio">Фамилия Имя Отчество</string>
    <string name="age">Возраст</string>
    <string name="title">Комплексная система мониторинга здоровья</string>
    <string name="author">Мелков Д.А.</string>
    <string name="logo">Логотип</string>
    <string name="pressure">Давление</string>
    <string name="life_value">Жизненные показатели</string>
    <string name="systolic">Верхнее давление</string>
    <string name="diastolic">Нижнее давление</string>
    <string name="pulse">Пульс</string>
    <string name="tachycardia">Тахикардия</string>
    <string name="date">Дата замера</string>
    <string name="weight">Вес</string>
    <string name="step_count">Количество шагов</string>
    <string name="time">Время замера</string>
    <string name="monitoring">3 Мониторинг здоровья</string>
    <string name="app_title">Просмотр фото</string>
    <string name="back">Назад</string>
    <string name="forward">Вперёд</string>
    <string name="transfer">22 Переход между экранами</string>
    <string name="user_name">Имя пользователя</string>
    <string name="email">Электронная почта</string>
    <string name="clear">Очистить</string>
    <string name="subscription">Подписка</string>
    <string name="form">21 Переход между формами</string>
    <string name="first">11 Первый проект</string>
    <string name="first_b">12 Собственный Hello World</string>
</resources>