<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.netodologia.myapplication.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/shared_prefs"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_tasks"
        android:orderInCategory="200"
        android:title="@string/tasks"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_cities"
        android:orderInCategory="300"
        android:title="@string/cities"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_check"
        android:orderInCategory="400"
        android:title="@string/check_box"
        app:showAsAction="never" />
</menu>