<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="6dp"
        android:background="@color/ic_flower_background"
        android:contentDescription="@string/logo"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_flower_layer" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:maxLines="5"
        android:paddingTop="0dp"
        android:text="@string/title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/author"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edtName"
        android:autofillHints=""
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="72dp"
        android:hint="@string/fio"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/imgLogo"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <EditText
        android:id="@+id/edtStepCount"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/widget_top_space"
        android:autofillHints=""
        android:hint="@string/age"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/edtName"
        app:layout_constraintStart_toStartOf="@+id/edtName"
        app:layout_constraintTop_toBottomOf="@+id/edtName" />

    <Button
        android:id="@+id/btnSaveLifeValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/colorButton"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/edtStepCount"
        app:layout_constraintTop_toBottomOf="@+id/edtStepCount" />

    <Button
        android:id="@+id/btnPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:text="@string/pressure"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLifeValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:text="@string/life_value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>