<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".TasksActivity">

    <Button
        android:id="@+id/chooseStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inner_space"
        android:gravity="start|center_vertical"
        android:text="@string/start_date" />

    <Button
        android:id="@+id/chooseEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inner_space"
        android:gravity="start|center_vertical"
        android:text="@string/end_date" />

    <CalendarView
        android:id="@+id/startDateCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inner_space"
        android:background="@color/colorCalendarBackground" />

    <CalendarView
        android:id="@+id/endDateCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inner_space"
        android:background="@color/colorCalendarBackground" />

    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inner_space"
        android:layout_gravity="end"
        android:text="@string/ok" />

</LinearLayout>